Apply OpenRewrite recipes